[package]
name = "imagetext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
emoji = ["once_cell", "emojis", "regex", "fxhash"]
default-resolver = ["emoji", "moka", "reqwest", "rayon"]
crosscompile = ["openssl/vendored"]
fontdb = ["log", "once_cell", "fxhash"]

[dependencies]
tiny-skia = "0.8.2"
rusttype = "0.9.3"
image = "0.24.5"

# emoji deps
once_cell = { version = "1.17.0", optional = true }
emojis = { version = "0.5.2", optional = true }
regex = { version = "1.7.1", optional = true }
fxhash = { version = "0.2.1", optional = true }

# default emoji resolver deps
moka = { version = "0.9.6", optional = true }
reqwest = { version = "0.11.14", features = ["blocking"], optional = true }
openssl = { version = "0.10.45", optional = true }
rayon = { version = "1.6.1", optional = true }

# fontdb deps
log = { version = "0.4.17", optional = true }

[dev-dependencies]
imagetext = { path = ".", features = ["emoji", "default-resolver", "fontdb", "crosscompile"] }