[package]
name = "imagetext"
authors = ["Nathaniel Fernandes"]
version = "2.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["emoji", "fontdb"]
emoji = ["once_cell", "emojis", "regex", "hashbrown"]
default-resolver = ["emoji", "moka", "reqwest", "rayon"]
vendored-openssl = ["openssl/vendored"]
fontdb = ["log", "once_cell", "hashbrown"]

[dependencies]
tiny-skia = "0.11.2"
rusttype = "0.9.3"
image = "0.25.2"
unicode-segmentation = "1.10.0"

# emoji deps
once_cell = { version = "1.17.0", optional = true }
emojis = { version = "0.6.1", optional = true }
regex = { version = "1.10.2", optional = true }
hashbrown = { version = "0.14.3", optional = true }

# default emoji resolver deps
moka = { version = "0.12.1", optional = true, features = ["sync"] }
reqwest = { version = "0.12.5", features = ["blocking"], optional = true }
openssl = { version = "0.10.61", optional = true }
rayon = { version = "1.6.1", optional = true }

# fontdb deps
log = { version = "0.4.17", optional = true }

# fontdue = { version = "0.8.0" }


[dev-dependencies]
imagetext = { path = ".", features = ["emoji", "default-resolver", "fontdb"] }
